# stackchan-family-robot

./: .env.example  .gitignore  .gitmodules  AGENTS.md  README.md  pyproject.toml
config/: wake_keywords_raw.txt
config/seed_character/: character.md  emotion_map.yaml  examples.md  gesture_map.yaml  manifest.yaml  response_instructions.md  safety.md  tool_policy.yaml  vocabulary.yaml  voice.yaml
deploy/cloudflare/: stackchan-tunnel.yml.example
docs/: architecture.md  elysia-avatar-design.md  elysia-persona-sources.md  hardware-check-2026-07-19.md  m1-firmware-baseline.md  m1-flash-validation-2026-07-19.md  m1-local-gateway.md  m2-bilingual-voice.md  operations-reliability.md  presence-tracking.md  remote-connectivity.md  roadmap.md  upstreams.md
firmware/: README.md  RESTORE.md  hardware-profile.m5stack-stack-chan.json  source-lock.json
firmware/product_overlay/: CMakeLists.txt  secret_logic_override.cpp
firmware/product_patches/: m2-avatar-audio.patch
integrations/codex/: README.md
integrations/openclaw/: README.md
scripts/: bootstrap_local_env.py  build_firmware.sh  build_product_firmware.sh  check_robot_health.py  firmware_env.sh  generate_firmware_config.py  generate_gpt_sovits_config.py  install_firmware_toolchain.sh  install_launch_agent.sh  prepare_firmware.sh  research_video_ocr.swift  run_gpt_sovits.sh  run_local_tts.sh  run_robot_services.sh  setup_child_identity.sh  setup_gpt_sovits.sh  setup_local_tts.sh  setup_presence_tracking.sh  setup_silero_vad.sh  setup_wake_word.sh  verify_firmware_build.py  verify_firmware_sources.py  warm_gpt_sovits.py  watch_robot_health.py
src/stackchan_admin_mcp/: __init__.py  server.py
src/stackchan_control/: __init__.py  app.py  avatar.py  child_identity.py  cli.py  gateway.py  metrics.py  presence.py  repository.py  schemas.py  settings.py  voice.py  wake.py
tests/: conftest.py  test_avatar.py  test_character.py  test_child_identity.py  test_firmware_config.py  test_gateway.py  test_health.py  test_memory.py  test_metrics.py  test_presence.py  test_tasks.py  test_voice.py  test_voice_provider.py
web/: index.html
