[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "stackchan-family-robot"
version = "0.1.0"
description = "Local-first control plane for a bilingual StackChan family robot"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115,<1",
  "httpx>=0.27,<1",
  "pydantic>=2.8,<3",
  "python-dotenv>=1.1,<2",
  "PyYAML>=6,<7",
  "uvicorn[standard]>=0.30,<1",
]

[project.optional-dependencies]
dev = ["pytest>=8,<10"]
mcp = ["mcp>=1.20,<2"]

[project.scripts]
stackchan-control = "stackchan_control.app:run"
stackchan-admin-mcp = "stackchan_admin_mcp.server:run"
robotctl = "stackchan_control.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
